# controller/coba.go
@@ -173,7 +173,18 @@ func GetPresensi(c *fiber.Ctx) error {
 			"message": "Data successfully updated",
 		})
 	}
-	
+
+// DeletePresensiByID godoc
+// @Summary Delete data presensi.
+// @Description Hapus data presensi.
+// @Tags Presensi
+// @Accept json
+// @Produce json
+// @Param id path string true "Masukan ID"
+// @Success 200
+// @Failure 400
+// @Failure 500
+// @Router /delete/{id} [delete]
 	func DeletePresensiByID(c *fiber.Ctx) error {
 		id := c.Params("id")
 		if id == "" {
